[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Images/player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Objects/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Gui/PlayerName.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Objects/Inventory.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Objects/Guns/Pistol.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Gui/hud.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Gui/PauseMenu.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D" groups=["Net", "Player"]]
position = Vector2( 16.2709, 15.8291 )
z_index = 100
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
bullet_preload = ExtResource( 3 )
username_preload = ExtResource( 4 )
player_hud = ExtResource( 7 )
pause_menu = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="StaminaBurnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Inventory" type="Node2D" parent="."]
script = ExtResource( 5 )
default_weapon = ExtResource( 6 )

[node name="GunPosition" type="Position2D" parent="."]
position = Vector2( 22, 8.5 )

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StaminaBurnTimer" to="." method="_on_StaminaBurnTimer_timeout"]
[connection signal="timeout" from="NetworkTickRate" to="." method="_on_NetworkTickRate_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
